test/expected/concept-error.out
c++decl> 
c++decl> explain static C auto x
                 ^
4,9: error: concept can not be "static"
c++decl> 
c++decl> struct S
c++decl> explain S::C auto x
                 ^
7,9: error: concept "C" may only be within a namespace; "S" was previously declared as "struct"
c++decl> 
c++decl> namespace N { struct NS; }
c++decl> explain N::NS::C auto x
                 ^
10,9: error: concept "C" may only be within a namespace; "N::NS" was previously declared as "struct"
